Aligned top half and bottom half to make sure its centered. Little fixes with css code and div containers.

--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -38,5 +38,4 @@ body {
 .pageAlignment {
   display: flex;
   justify-content: center;
-  padding-top: 15%; /*Temporary waiting for other items */
 }
