--- a/apps/frontend/src/styling/loginText.css
+++ b/apps/frontend/src/styling/loginText.css
@@ -16,7 +16,6 @@
   font-weight: 400;
   line-height: 39px; /* 97.5% */
 
-  margin-left: 100%;
   text-align: left;
 }
 .BacktoMap {
@@ -31,25 +30,24 @@
   font-weight: 400;
   line-height: 39px; /* 97.5% */
 
-  margin-left: 90%;
-  text-align: right;
+  text-align: center;
+  padding-left: 25%;
 }
 
 .loginFor {
   width: 300px;
   height: 66px;
   flex-shrink: 0;
-
   color: #042c5c;
   font-family: "Jockey One", sans-serif;
   font-size: 25px;
   font-style: normal;
   font-weight: 400;
   line-height: 1;
-
   h3 {
     font-size: 90%;
   }
-
-  margin-left: 100%;
+}
+.mergePaddingResolve {
+  padding-bottom: 10%;
 }
